[package]
name = "atcoder_tui_viewer"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "atv"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
scraper = "0.24"
unicode-width = "0.2"
